--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -6,14 +6,21 @@
   align-items: center;
   background: #ffffff;
 }
+
+.fa-instagram {
+  padding-top: 13px;
+}
+
 .search-form {
   width: 150px;
   font-size: 14px;
 }
+
 .search-form input {
   text-align: center;
   color: #262626;
 }
+
 .image-wrapper {
   height: 50px;
 }
